@@ -67,10 +67,10 @@ namespace libtorrent
 
 	struct logger
 	{
-		logger(boost::filesystem::path const& filename, bool append = true)
+		logger(boost::filesystem::path const& filename, int instance, bool append = true)
 		{
 			using namespace boost::filesystem;
-			path dir(complete("libtorrent_logs"));
+			path dir(complete("libtorrent_logs" + boost::lexical_cast<std::string>(instance)));
 			if (!exists(dir)) create_directories(dir);
 			m_file.open(dir / filename, std::ios_base::out | (append ? std::ios_base::app : std::ios_base::out));
 			*this << "\n\n\n*** starting log ***\n";
